fix: grid low contrast, header blurs, post container height (#2820)
* fix: low contrast bg

* fix: conversation header blur

* fix: home padding

* fix: header blur

* fix: post container height

* fix: post container loading

--- a/src/apps/feed/components/post-view-container/styles.module.scss
+++ b/src/apps/feed/components/post-view-container/styles.module.scss
@@ -7,6 +7,8 @@
 
 .Panel {
   padding: 0;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .Details {
