--- a/src/apps/home/styles.module.scss
+++ b/src/apps/home/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: variables.$page-padding-vertical variables.$default-gap 0;
+  padding: variables.$page-padding-vertical variables.$default-gap variables.$page-padding-vertical 0;
 
   pointer-events: all;
 }
